# python_project_boilerplate

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
src/GlobalConfigs/: __init__.py  logging_conf.py
tests/: main_test.py
